init: create and delete tariff, fix handlers when return bad JSON now return it and stop this, before it works uncorrect
